css/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
}

html {
  scroll-behavior: smooth;
  overflow: hidden;
}

html,
body {
  height: 100%;
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 28px;
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 22px;
}

h5 {
  font-size: 20px;
}

h6 {
  font-size: 18px;
}

p {
  font-size: 16px;
}

.title {
  margin-bottom: 15px;
}

#header {
  position: fixed;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 10vh;
  padding: 0 50px;
  z-index: 6000;
}

#logo {
  font-weight: bold;
  color: white;
  font-size: 20px;
}

#hamburger {
  position: relative;
  display: none;
  cursor: pointer;
  margin-left: auto;
  padding: 10px;
}

.line {
  background: white;
  width: 25px;
  height: 2px;
  margin: 2px 0;
  opacity: 1;
  transform: rotateZ(0deg);
}

.line:nth-child(2),
.line:nth-child(3) {
  transition: 0.3s opacity;
}

.line:nth-child(1),
.line:nth-child(4) {
  transition: 0.3s transform, top, left;
}

.close .line:nth-child(2),
.close .line:nth-child(3) {
  opacity: 0;
}

.close .line:nth-child(1),
.close .line:nth-child(4) {
  position: absolute;
  top: 50%;
  transform: translate(-50%, 0%);
}

.close .line:nth-child(1) {
  transform: rotateZ(45deg);
}

.close .line:nth-child(4) {
  transform: rotateZ(-45deg);
}

.navbar {
  width: 30%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style-type: none;
}

.nav-link {
  display: block;
  padding: 10px;
  color: white;
  text-decoration: none;
  transition: 0.3s transform;
}

.nav-link:hover {
  transform: scale(1.2);
}

section {
  padding: calc(10vh + 15px) 50px 0px 50px;
  height: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
}

#home {
  position: relative;
  background-color: rgb(13, 3, 23);
}

#home img {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  margin-left: auto;
  right: 0;
}

#home *:not(.box) {
  z-index: 5000;
}

.intro {
  position: absolute;
  top: 50%;
  left: 10vw;
  transform: translate(0, -50%);
  color: white;
  width: 80vw;
  max-width: 700px;
}

.intro p{
  margin: 30px 0;
}

.box {
  opacity: 0.5;
  background: linear-gradient(#b993d6, #8ca6db);
  border-radius: 100%;
  transform: scale(0);
  transition: 0.3s transform;
  position: absolute;
  z-index: 2;
  bottom: 100%;
  animation: rotation 3s;
}

.heading {
  text-align: center;
}

.quality-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 60vh;
  margin-top: 15px;
}

.quality {
  display: flex;
  justify-content: space-around;
  align-items: center;
  max-height: 300px;
  max-width: 900px;
  margin-bottom: 15px;
  width: 70vw;
}
.right {
  margin-left: auto;
  flex-direction: row-reverse;
}

.quality img {
  height: 20vw;
  width: 20vw;
  max-width: 250px;
  max-height: 250px;
  border-radius: 100%;
  object-fit: cover;
  box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.5);
}

.quality p {
  max-width: 500px;
  width: 40vw;
}

.sub-heading {
  position: relative;
  color: rgb(246, 144, 11);
  margin-bottom: 9px;
}

.sub-heading:after {
  position: absolute;
  bottom: -5px;
  left: 0;
  width: 100%;
  max-width: 150px;
  height: 4px;
  border-radius: 0%;
  content: "";
  background-color: rgb(246, 144, 11);
}

.skill-container {
  padding: 50px;
  margin-top: 50px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.right-container,
.left-container {
  width: 40%;
}

.skill {
  margin: 0;
  margin-bottom: 50px;
  display: flex;
}

.logo img {
  margin-right: 10px;
  height: 50px;
  width: 50px;
  object-fit: cover;
  border-radius: 100%;
}

.project-container {
  width: 90vw;
  height: calc(78vh - 20px);
  margin: auto;
  margin-top: 20px;
  box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.08);
  border-radius: 10px;
}

.slick-list,
.slick-track {
  height: 100%;
}

.project {
  width: calc(90vw - 20px);
  height: calc(100% - 20px);
  margin: 10px;
  padding: 50px;
  background-color: rgb(255, 255, 255);
  border-radius: 10px;
  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
}

.project__name {
  font-weight: bold;
}

.slick-prev:before,
.slick-next:before {
  color: black;
}

.project p {
  margin-top: 20px;
}

.slideshow {
  width: 100%;
  height: 48%;
  margin-bottom: 10px;
  border-radius: 10px;
  overflow: hidden;
  background-color: #efefef;
}

.slideshow img {
  width: 70vw;
  height: 100%;
  object-fit: contain;
  object-position: top;
}

.description {
  height: 48%;
  overflow: auto;
}

.description::-webkit-scrollbar {
  width: 5px;
  background: #efefef;
}

.description::-webkit-scrollbar-thumb {
  background: #333;
}

.glow {
  color: #fff;
  margin-left: 15px;
  text-align: center;
  -webkit-animation: glow 1s ease-in-out infinite alternate;
  -moz-animation: glow 1s ease-in-out infinite alternate;
  animation: glow 1s ease-in-out infinite alternate;
}

@keyframes glow {
  from {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #002ae6,
      0 0 40px #0f00e6, 0 0 50px #000fe6, 0 0 60px #1700e6, 0 0 70px #2300e6;
  }
  to {
    text-shadow: 0 0 20px #fff, 0 0 30px #684dff, 0 0 40px #684dff,
      0 0 50px #684dff, 0 0 60px #594dff, 0 0 70px #504dff, 0 0 80px #4d59ff;
  }
}

@-webkit-keyframes glow {
  from {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #002ae6,
      0 0 40px #0f00e6, 0 0 50px #000fe6, 0 0 60px #1700e6, 0 0 70px #2300e6;
  }
  to {
    text-shadow: 0 0 20px #fff, 0 0 30px #684dff, 0 0 40px #684dff,
      0 0 50px #684dff, 0 0 60px #594dff, 0 0 70px #504dff, 0 0 80px #4d59ff;
  }
}

@keyframes rotation {
  0% {
    transform: rotate(0deg) scale(0);
  }

  50% {
    transform: rotate(360deg) scale(1);
  }

  100% {
    transform: rotate(0deg) scale(0);
  }
}

@media screen and (min-width: 1200px) {
}

@media screen and (max-width: 1200px) {
  p {
    font-size: 14px;
  }

  .skill-container {
    padding: 0;
  }

  .left-container,
  .right-container {
    width: 48%;
  }
}

@media screen and (max-width: 1024px) {
  h1 {
    font-size: 28px;
  }

  h2 {
    font-size: 24px;
  }

  h3 {
    font-size: 18px;
  }

  h4 {
    font-size: 16px;
  }

  h5 {
    font-size: 14px;
  }

  h6 {
    font-size: 13px;
  }
  p {
    font-size: 12px;
  }
}

@media screen and (max-width: 768px) {
  .project-container {
    width: 85vw;
  }

  .project {
    width: 80vw;
  }

  p {
    font-size: 9px;
  }

  .logo img {
    height: 25px;
    width: 25px;
  }

  .sub-heading::after {
    height: 2px;
    bottom: -2px;
  }

  #hamburger {
    display: block;
  }

  .navbar {
    position: fixed;
    top: 10vh;
    left: 0;
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
    max-height: 0;
    transition: 0.5s max-height;
  }

  .navbar.open-navbar {
    max-height: 40vh;
    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5);
  }
  .navbar li {
    width: 100%;
    padding: 5px 40px;
    background-color: rgb(13, 3, 23);
  }

  .nav-link:hover {
    transform: scale(1.1);
  }

  .intro {
    background: rgba(0, 0, 0, 0.5);
    padding: 40px 20px;
  }

  .skill-container {
    flex-direction: column;
    justify-content: flex-start;
  }

  .left-container,
  .right-container {
    width: 100%;
  }
}

@media screen and (max-width: 480px) {
}

@media screen and (max-width: 320px) {
}

